item3/nohup.out
  File "gestion-claves.py", line 22
    hash_value =
               ^
SyntaxError: invalid syntax
 * Serving Flask app "gestion-claves" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5800/ (Press CTRL+C to quit)
127.0.0.1 - - [13/Jul/2025 23:57:10] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [13/Jul/2025 23:57:55] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [14/Jul/2025 00:01:22] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [14/Jul/2025 00:01:34] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
